use vite-ssg to prerender cool pages

--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vue-tsc -b && vite-ssg build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.10",
-    "vue-router": "^4.4.5"
+    "vue": "^3.5.10"
   },
   "devDependencies": {
+    "@unhead/vue": "^1.11.13",
     "@vitejs/plugin-vue": "^5.1.4",
     "sass-embedded": "^1.82.0",
     "typescript": "^5.5.3",
     "vite": "^5.4.8",
+    "vite-ssg": "^0.24.2",
+    "vue-router": "^4.5.0",
     "vue-tsc": "^2.1.6"
   }
 }
